Added landing page styling.

--- a/static/global.css
+++ b/static/global.css
@@ -3,5 +3,12 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+
+    min-height: 100vh;
+
     background-color: #f7f7f7;
+
+    margin: 0;
 }
